mylang/tests/fail/f3.pas
program

function less(var i, j: int): bool
var less: bool;
begin
    less := i < j
end;

begin
    writeln(123)
end@

